securitygroup.tf
# Create Security Group for the Bastion Host aka Jump Box
# terraform aws create security group

resource "aws_security_group" "ssh-security-group" {
  name = "SSH Security Group"
  description = "Enable SSH access on Port 22"
  vpc_id = aws_vpc.vpc.id
  ingress {
    description = "SSH Access"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["${var.ssh-location}"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "SSH-Security-Group"
  }
}

# Create Security Group for the Web Server
# terraform aws create security group

resource "aws_security_group" "webserver-security-group" {
  name = "Web Server Security Group"
  description = "Enable HTTP/HTTPS access on Port 80 via SSH access on Port 22 via SSH SG"
  vpc_id = aws_vpc.vpc.id
  ingress {
    description = "SSH Access"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    security_groups = ["${aws_security_group.ssh-security-group.id}"]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    "Name" = "Web-Server-Security-Group"
  }
}
